--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-    <title>Around the Big Island in 9 Days</title>
+    <title>Biking the Big Island of Hawaii in 9 Days</title>
 
     <script type="module" src="index.js"></script>
     <link rel="stylesheet" href="index.css"/>
   </head>
   <body>
     <div id="map"></div>
+    <div id="sidebar">
+    </div>
   </body>
 </html>
